# CMYKE

./: .gitignore  DANMAKU_FEATURE.md  HANDOFF.md  README.md  analysis_options.yaml  pubspec.yaml
.opencode/: architecture-progress.md
backend-rust/: Cargo.toml  README.md
backend-rust/src/: main.rs
backend-rust/src/gateway/: mod.rs  pairing.rs  routes.rs  session_map.rs  types.rs
backend-rust/src/gateway/adapter/: computer_use.rs  feishu.rs  mod.rs  registry.rs  telegram.rs
backend-rust/src/gateway/router/: message_router.rs  mod.rs  policy.rs
backend-rust/src/gateway/storage/: mod.rs  pairing_store.rs  session_map_store.rs
docs/: ARCHITECTURE.md  CHANNEL_GATEWAY_DESIGN.md  COMMANDS.md  DEEP_RESEARCH_PRO_DESIGN.md  DESKTOP_PACKAGING_PLAN.md  EMBODIMENT_ARCHITECTURE.md  HANDOFF.md  MCP_SKILLS_AGENTS.md  MIGRATION_FROM_NTAI.md  MOBILE_GATEWAY_PLAN.md  MODEL_SELECTION_VLA.md  OpenCode_CLI_Tool_Contract.md  PRESET_PROVIDERS.md  ROADMAP.md  STRUCTURED_OUTPUT_PROTOCOL.md  STUDY_MIGRATION_CANDIDATES.md  TEST_PLAN_NEXT.md  THIRD_PARTY_ATTRIBUTIONS.md  VOICE_CHANNEL_WINDOWS.md  WINDOWS_DEV_CHECKLIST.md  left_brain_first_architecture.md  siliconflow_openapi.yaml
lib/: app.dart  main.dart
linux/: CMakeLists.txt
scripts/: export_crosswoz_base_chat.py
test/: bilibili_danmaku_adapter_test.dart  brain_contract_test.dart  brain_router_test.dart  chat_engine_auto_search_policy_test.dart  chat_engine_incremental_tts_policy_test.dart  chat_engine_interrupt_policy_test.dart  chat_turn_decision_engine_test.dart  danmaku_batch_summarizer_test.dart  message_queue_test.dart  (+11 more)
(+220 files in other folders)
